# PrismTests

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  main.cpp  makefile  runall.bat  runall.py  runfiltered.bat  runfiltered.py  runintegration.bat  runintegration.py  runner.bat  rununit  rununit.bat  rununit.py  sources.cmake
Debug/: PrismTests  main.d  makefile  objects.mk  sources.mk  subdir.mk
Debug/src/: Algorithm_Move.d  FirstTest.d  algorithm_test.d  subdir.mk
Debug/src/Vector/: Conversions.d  DefaultVector.d  DuplicatesVector.d  ElementAccess.d  EmptyVectorTest.d  Iterators.d  NewVector.d  PopulatedVector.d  Queries.d  UniqueVector.d  Vector.d  VectorConversions.d  VectorElementAccess.d  VectorEquality.d  VectorInsertions.d  VectorIterators.d  VectorNonMember.d  VectorQueries.d  VectorRemovals.d  subdir.mk
Debug/src/non_tdd_unit_tests/: ArrayTest.d  BitvectorTest.d  CircleTest.d  DequeTest.d  ListTest.d  PairTest.d  ReverseIteratorTest.d  SharedDataPointerTest.d  SharedDataTest.d  StackTest.d  StringTest.d  TimeTest.d  UniquePointerArrayTest.d  UniquePointerTest.d  VersionTest.d  algorithmTest.d  functorTest.d  subdir.mk  type_traitsTest.d
core/: CMakeLists.txt  sources.cmake
core/inc/prism/: FakeFileSystem  FakeJsonArray  FakeJsonObject  FakeJsonValue  MockFileSystem  SystemTempDir  Time_WithETMStub  tests_global
core/inc/prism/h/: FakeFileSystem.h  MockFileSystem.h  SystemTempDir.h
core/inc/prism/tests/: FakeFileSystem  FakeJsonArray  FakeJsonObject  FakeJsonValue  MockFileSystem  SystemTempDir  Time_WithETMStub  global
core/inc/prism/tests/h/: MockFileSystem.h  SystemTempDir.h  global.h  tests_global.h
core/inc/prismtests/: DynamicNumber  FakeJsonArray  FakeJsonObject  FakeJsonValue  Number  Time_WithETMStub  scratchpad
core/inc/prismtests/h/: Number.h
core/inc/prismtests/h/json/: FakeJsonArray.h
core/src/: FakeFileSystem.cpp
core/src/core/json/: FakeJsonArray.cpp  FakeJsonObject.cpp  FakeJsonValue.cpp
core/src/json/: FakeJsonArray.cpp  FakeJsonObject.cpp  FakeJsonValue.cpp
docs/: .~lock.vector_tests.ods#  vector_tests.ods
inc/prism/: DynamicNumber  FakeJsonArray  FakeJsonArrayImpl  FakeJsonObject  FakeJsonObjectImpl  FakeJsonValueImpl  JsonArrayStub  JsonObjectStub  MockEvent.h  MockPostedEventQueue.h  MockRunLoop.h  MockWin32EventQueue.h  Number  Time_WithETMStub  scratchpad
inc/prism/core/json/: JsonArrayStub.h  JsonObjectStub.h
inc/prism/gui/stubs/: StubNativeWidget.h
inc/prism/h/: DynamicNumber.h  Time_WithETMStub.h  scratchpad.h
integration/: CMakeLists.txt  sources.cmake
integration/src/: main.cpp
integration/src/core/: FileInfoIntegrationTests.cpp
integration/src/core/FileInfo/: FileInfoAbsolutePathIntegrationTests.cpp  FileInfoAbsolutePathTests.cpp  FileInfoAbsolutePathTests.h  FileInfoCreationDateTests.h  FileInfoExistsIntegrationTests.cpp  FileInfoExistsTests.h  FileInfoSizeTests.h  (+3 more)
resources/permissions/: CMakeLists.txt
src/: Algorithm_Move.cpp  Iterator.cpp  List.cpp  MoveIterator.cpp  Vector.cpp  algorithm_test.cpp  main.cpp
src/Vector/: Conversions.cpp  DefaultVector.cpp  DuplicatesVector.cpp  ElementAccess.cpp  Iterators.cpp  NewVector.cpp  PopulatedVector.cpp  Queries.cpp  UniqueVector.cpp  Vector.cpp  VectorConversions.cpp  VectorElementAccess.cpp  VectorEquality.cpp  VectorInsertions.cpp  VectorIterators.cpp  VectorNonMember.cpp  VectorQueries.cpp  VectorRemovals.cpp  VectorSizeFiveCapacityTen.cpp
src/core/: AlgorithmMoveTests.cpp  IteratorTests.cpp  ObjectTests.cpp  PPointTests.cpp  PStringTests.cpp  PointTests.cpp  RectTests.cpp  SizeTests.cpp  StackTests.cpp  StringTests.cpp  TokenizerTests.cpp  VectorTests.cpp  module.mk
src/core/json/: DummyTests.cpp  JsonArrayTests.cpp  JsonDocTests.cpp  JsonLexerTests.cpp  JsonObjectIteratorTests.cpp  JsonObjectTests.cpp  JsonParserTests.cpp  JsonStringBuilderTests.cpp  JsonTokenOrderValidatorTests.cpp  JsonValueTests.cpp  module.mk
src/dummy/: DynamicNumber.h  Number.h
src/eventsystem/: PostedEventQueueTest.cpp  RunLoopTest.cpp  module.mk
src/gui/: WidgetTests.cpp  module.mk
src/main/: main.cpp  module.mk
src/non_tdd_unit_tests/: ArrayTest.cpp  CircleTest.cpp  ListTest.cpp  PairTest.cpp  StackTest.cpp  StringTest.cpp  TimeTest.cpp  UniquePointerArrayTest.cpp  UniquePointerTest.cpp  VersionTest.cpp  module.mk  type_traitsTest.cpp
src/tests/: Algorithm_Move.cpp  ObjectTests.cpp  Time.cpp  Vector.cpp  Win32EventQueueTest.cpp
unit/: .gitignore  CMakeLists.txt  sources.cmake
unit/inc/prism/: FakeJsonValue  Responder.h
unit/inc/prism/core/json/fakes/: FakeJsonObject.h
unit/src/core/: FileInfoUnitTests.cpp  ListTests.cpp  PStringTests.cpp  PairTests.cpp  PointTests.cpp  RectTests.cpp  SizeTests.cpp  StringBuilderTests.cpp  VectorTests.cpp
unit/src/core/FileInfo/: FileInfoAbsolutePathTests.cpp  FileInfoAbsolutePathTests.h  FileInfoBasename.cpp  FileInfoBasenameTests.cpp  FileInfoBasenameTests.h  FileInfoCanonicalFilePathTests.cpp  FileInfoCanonicalFilePathTests.h  FileInfoCreationDateTests.h  FileInfoEntireBasenameTests.cpp  FileInfoEntireBasenameTests.h  FileInfoEntireSuffixTests.cpp  FileInfoEntireSuffixTests.h  FileInfoExistsTests.cpp  FileInfoExistsTests.h  FileInfoExtractBasename.cpp  FileInfoFilenameTests.cpp  FileInfoFilenameTests.h  FileInfoPathSeparatorTests.h  FileInfoSizeTests.cpp  FileInfoSizeTests.h  FileInfoSuffixTests.cpp  FileInfoSuffixTests.h  FileInfoTests.cpp  FileInfoTests.h  FileInfoUnitTests.cpp
unit/src/core/json/: JsonArrayTests.cpp  JsonDocTests.cpp  JsonObjectTests.cpp  JsonParserExceptionTests.cpp  JsonStringBuilderTests.cpp  JsonValueTests.cpp
unit/src/core/json/fakes/: FakeJsonArray.cpp
unit/src/gui/: WidgetTests.cpp
unit/src/main/: main.cpp
unit/src/non_tdd_unit_tests/: ArrayTest.cpp  BitvectorTest.cpp  DequeTest.cpp  ListTest.cpp  ReverseIteratorTest.cpp  SharedDataPointerTest.cpp  SharedDataTest.cpp  TimeTest.cpp  UniquePointerArrayTest.cpp  algorithmTest.cpp  functorTest.cpp  type_traitsTest.cpp
unit/xml/: script.js  style.css
xml/: test_results.html  test_results.xml
(+11 files in other folders)
